[gd_scene load_steps=19 format=2]

[ext_resource path="res://Box.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/PlayerStats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/LabelChooser.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/TesterPlayer.gd" type="Script" id=6]
[ext_resource path="res://HitboxAttributes/TesterPlayer/TesterPlayerHit1.gd" type="Script" id=7]
[ext_resource path="res://HitboxAttributes/TesterPlayer/TesterPlayerHit2.gd" type="Script" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 48.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 32 )

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CapsuleShape2D" id=7]
radius = 24.0
height = 16.0

[sub_resource type="Animation" id=8]
resource_name = "hitLeft"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Hitbox2/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "hitRight"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Hitbox2/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "none"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Hitbox2/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 0
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 9.23872e-07, 0 )
scale = Vector2( 1.04348, 1 )
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -12 )
scale = Vector2( -1, 1 )

[node name="Hitbox2" parent="Position2D" instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 1048575
script = ExtResource( 8 )

[node name="CollisionShape2D" parent="Position2D/Hitbox2" index="0"]
position = Vector2( 48, 36 )
rotation = 1.5708
shape = SubResource( 1 )
disabled = true

[node name="Hitbox" parent="Position2D" instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 1048575
script = ExtResource( 7 )

[node name="CollisionShape2D" parent="Position2D/Hitbox" index="0"]
position = Vector2( 36, 0 )
rotation = 1.5708
shape = SubResource( 2 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "none"
anims/HitLeft = SubResource( 4 )
anims/HitRight = SubResource( 5 )
anims/none = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="LabelChooser" parent="." instance=ExtResource( 5 )]
which_label = 1

[node name="PlayerStats" parent="." instance=ExtResource( 4 )]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "none"
anims/hitLeft = SubResource( 8 )
anims/hitRight = SubResource( 9 )
anims/none = SubResource( 10 )

[connection signal="body_entered" from="Position2D/Hitbox" to="." method="_on_Hitbox_body_entered"]

[editable path="Position2D/Hitbox2"]
[editable path="Position2D/Hitbox"]
[editable path="Hurtbox"]
